[gd_scene load_steps=7 format=3 uid="uid://cesyd0hntyf21"]

[ext_resource type="Script" path="res://prototypes/HardwareClockMetronome/HardwareClockMetronomeTest.gd" id="1_y0mda"]
[ext_resource type="AudioStream" uid="uid://br44a2m65rmf6" path="res://audio/tracks/mfrh.ogg" id="2_2j4bv"]
[ext_resource type="Script" path="res://prototypes/HardwareClockMetronome/HardwareMetronome.gd" id="2_im6br"]
[ext_resource type="AudioStream" uid="uid://b7eodu36uenmq" path="res://audio/tracks/Omari-cyclin-loop-83-BPM.ogg" id="3_4wb41"]
[ext_resource type="Script" path="res://scripts/patterns/StateMachine.gd" id="5_5n74s"]
[ext_resource type="Script" path="res://scripts/patterns/RhythmStateMachine/RhythmState.gd" id="6_pxwph"]

[node name="HardwareClockMetronomeTest" type="Node2D"]
script = ExtResource("1_y0mda")
stream = ExtResource("2_2j4bv")
nextStream = ExtResource("3_4wb41")

[node name="HardwareClockMetronome" type="Node" parent="."]
script = ExtResource("2_im6br")

[node name="Debug" type="Control" parent="HardwareClockMetronome"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeDebug" type="VBoxContainer" parent="HardwareClockMetronome/Debug"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="HardwareClockMetronome/Debug/TimeDebug"]
layout_mode = 2
text = "-Current Buffer-"

[node name="Time" type="Label" parent="HardwareClockMetronome/Debug/TimeDebug"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "asdasdasd"

[node name="Beats" type="Label" parent="HardwareClockMetronome/Debug/TimeDebug"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "asdasdasd"

[node name="Label3" type="Label" parent="HardwareClockMetronome/Debug/TimeDebug"]
layout_mode = 2
text = "-Total Time-
"

[node name="TotalTime" type="Label" parent="HardwareClockMetronome/Debug/TimeDebug"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "asdasdasd"

[node name="TotalBeats" type="Label" parent="HardwareClockMetronome/Debug/TimeDebug"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "asdasdasd"

[node name="RhythmStateMachine" type="Node" parent="."]
script = ExtResource("5_5n74s")
initial_state = NodePath("Listen")
autostart = false

[node name="Listen" type="Node" parent="RhythmStateMachine" node_paths=PackedStringArray("nextState")]
script = ExtResource("6_pxwph")
durationBeats = 3.7
nextState = NodePath("../Record")

[node name="Record" type="Node" parent="RhythmStateMachine" node_paths=PackedStringArray("nextState")]
script = ExtResource("6_pxwph")
nextState = NodePath("../Verify")

[node name="Verify" type="Node" parent="RhythmStateMachine" node_paths=PackedStringArray("nextState")]
script = ExtResource("6_pxwph")
durationBeats = 4.3
nextState = NodePath("../Listen")
